@@ -1,3 +1,5 @@
+* Remove extraneous Safari 2 fork of the $A() utility method. [Prototype LH #595] [jddalton, kangax]
+
 * Fix incorrect method references in the DOM Level 0 event system. [jddalton]
 
 * Add private methods getWindow() and getRoot() to ensure the Event system works across frames. [jddalton]
